<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/n"
    android:layout_alignParentStart="false"
    android:layout_alignParentLeft="false"
    android:layout_alignParentTop="false"
    android:layout_alignParentRight="true"
    android:layout_centerHorizontal="false"
    android:background="@drawable/annotation_2020_05_06_1ddd"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35sp"
        android:fontFamily="@font/biryani_bold"
        android:text="@string/driver_login"
        android:textColor="#20639B"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/email_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="1dp"
        android:focusable="true"
        android:fontFamily="@font/biryani_bold"
        android:hint="Enter Email"
        android:textColorHint="#20639B" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_et"
        android:layout_alignEnd="@+id/email_et"
        android:layout_alignRight="@+id/email_et"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:fontFamily="@font/biryani_bold"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#20639B"
        android:textColorHint="#20639B" />

    <Button
        android:id="@+id/new_user_btn"
        android:layout_width="113dp"
        android:layout_height="62dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-56dp"
        android:layout_marginRight="-56dp"
        android:layout_marginBottom="74dp"
        android:layout_toStartOf="@+id/welcome"
        android:layout_toLeftOf="@+id/welcome"
        android:background="#20639B"
        android:fontFamily="@font/biryani_bold"
        android:text="@string/new_user"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="113dp"
        android:layout_height="62dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-56dp"
        android:layout_marginEnd="0sp"
        android:layout_marginBottom="74dp"
        android:layout_toEndOf="@+id/welcome"
        android:background="#20639B"
        android:fontFamily="@font/biryani_bold"
        android:text="@string/login"
        android:textColor="@android:color/white" />
</RelativeLayout>